# protein-function-qcnn

./: .gitignore  LICENSE  README.md  generate_figures.py  pyproject.toml  requirements.txt  test_model.py
figures/: classification_report.txt  metrics.csv
models/: hybrid_qnn_protein_model.pt
notebooks/: hybrid_qnn_final.ipynb
src/: init.py
src/config/: config.py
src/evaluation/: __init__.py  auc_summary.py  calibration.py  calibration_export.py  calibration_metrics.py  classification_table.py  confusion_matrix.py  confusion_plot.py  evaluator.py  metrics.py  metrics_export.py  per_class_metrics.py  prediction_collector.py  reliability_diagram.py  report_generator.py  roc_analysis.py  roc_plot.py  support_statistics.py
src/evaluation/ablation/: __init__.py  builder.py  comparison.py  experiment.py  registry.py  results.py  runner.py  variants.py
src/evaluation/ontology/: __init__.py  ontology_configuration.py  ontology_metrics.py  ontology_utils.py  ontology_validator.py
src/evaluation/statistics/: __init__.py  bootstrap.py  confidence_interval.py  effect_size.py  statistical_summary.py
src/evaluation/uniprot/: auc.py  aupr.py  (+2 more)
src/models/: __init__.py
src/preprocessing/: __init__.py  amino_acid_encoder.py  class_weights.py  dataloader_factory.py  dataset_splitter.py  protein_dataset.py  sequence_cleaner.py  sequence_padding.py
src/training/: __init__.py  checkpoint_manager.py  early_stopping.py  history_logger.py  losses.py  metric_tracker.py  optimizer_factory.py  scheduler_factory.py  trainer.py
src/utils/: constants.py  logger.py  paths.py
(+21 files in other folders)
